--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -1,10 +1,21 @@
 {
   "env": { "node": true, "es2022": true },
-  "extends": ["eslint:recommended", "plugin:import/recommended", "plugin:import/typescript", "prettier"],
-  "parserOptions": { "ecmaVersion": "latest", "sourceType": "module" },
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:import/recommended",
+    "plugin:import/typescript",
+    "prettier"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module",
+    "project": "./tsconfig.json"
+  },
   "rules": {
     "simple-import-sort/imports": "warn",
     "simple-import-sort/exports": "warn"
   },
-  "plugins": ["simple-import-sort"]
+  "plugins": ["@typescript-eslint", "simple-import-sort"]
 }
