Add backend files to Vercel function bundle
Include backend/** files in the Vercel Serverless Function to resolve ERR_MODULE_NOT_FOUND error

--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,10 @@
       "source": "/api/:path*",
       "destination": "/api/index"
     }
-  ]
+  ],
+  "functions": {
+    "api/index.ts": {
+      "includeFiles": "backend/**"
+    }
+  }
 }
