--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "vercel-build": "npm run build"
   },
   "dependencies": {
+    "cookie-session": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
